# study-rust-web-actix

./: Cargo.toml  Readme.md
db/: .env  Cargo.toml  db.sql  docker-compose.yml
db/init.d/: courses.sql  teachers.sql
db/src/: main.rs
wasm-client/: .gitignore  Cargo.toml  LICENSE_MIT
wasm-client/src/: lib.rs  utils.rs
wasm-client/src/models/: course.rs
wasm-client/www/: index.html  index.js
webapp/: Cargo.toml
webapp/src/: errors.rs  handlers.rs  routers.rs
webapp/static/: register.html  teacher.html
webservice/: Cargo.toml
webservice/src/: db_access.rs  errors.rs  handlers.rs  routers.rs  state.rs
webservice/src/dbaccess/: course.rs  teacher.rs
webservice/src/handlers/: course.rs  teacher.rs
webservice/src/models/: course.rs  teacher.rs
