[package]
name = "webservice"
version = "0.1.0"
edition = "2021"
default-run = "teacher-service"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-rt = "2.6.0"
dotenv = "0.15.0"
serde = { version = "1.0.134", features = ["derive"] }
chrono = { version = "0.4.19", features = ["serde"] }
openssl = { version = "0.10.38", features = ["vendored"] }
sqlx = { version = "0.5.7", features = [
  "postgres",
  "runtime-actix-rustls", 
  "macros",
  "chrono", 
]}

[[bin]]
name = "server1"

[[bin]]
name = "teacher-service"
